src/zenoh_dart.h

// ---------------------------------------------------------------------------
// Build feature detection
// ---------------------------------------------------------------------------

// Feature bits returned by zd_features(). NOT guarded -- these macros and the
// function are compiled into EVERY variant so a caller can detect, at runtime,
// which optional features the loaded native was built with. (ffigen's zd_.*
// filter is lowercase-only and case-sensitive, so these uppercase macros are
// NOT emitted to bindings.dart; Dart consumers mirror the bit positions.)
#define ZD_FEATURE_UNSTABLE_API (1u << 0)
#define ZD_FEATURE_SHARED_MEMORY (1u << 1)
/// Returns a bitmask of the optional zenoh features this native was built with.
///
/// ZD_FEATURE_UNSTABLE_API is set when Z_FEATURE_UNSTABLE_API was defined at
/// compile time; ZD_FEATURE_SHARED_MEMORY when Z_FEATURE_SHARED_MEMORY was.
/// Which bits are set depends on the build variant the native was compiled
/// as, so two natives for the same platform can answer differently. One fact
/// holds on every variant: an Android native never carries shared memory. The
/// Dart layer uses this to fail loudly when an unstable entrypoint is called
/// against a native that lacks the feature (a build-variant mismatch), instead
/// of crashing in zenoh-c. Cheap enough to call once and cache.
FFI_PLUGIN_EXPORT uint32_t zd_features(void);
/// Frees a block with no canon handle in it. The slot-only shape.
///
/// Used where the Dart wrapper's whole release is a `calloc.free` — today
/// `ZDeserializer` — and as the RE-ATTACHED shape for a wrapper whose canon
/// handle has moved out from under it (a consumed `ShmMutBuffer`, a
/// `KeyExpr` view's string block).
///
/// See the family contract above: callback-only, not idempotent, frees a
/// Dart-allocated block.
FFI_PLUGIN_EXPORT void zd_fin_free_block(void* token);
/// Returns how many times the entry for @p kind has fired in this process.
///
/// ⚠️ **A TEST INSTRUMENT, and the only member of this family Dart calls
/// directly.** It exists because a leak is invisible to a behavioural
/// assertion: dispose-after-consume, double-dispose and accessor-guard cells
/// all pass identically on leaking and on fixed code. This counter plus
/// allocation pressure is what makes a release-path cell a RESOURCE
/// measurement, with a both-ways injected calibration
/// (attach-without-detach → 2 · detach-before-drop → 1 · no-attach → 0).
///
/// ⚠️ **PER ENTRY, NOT GLOBAL, AND THAT IS LOAD-BEARING.** A single counter
/// cannot say WHICH entry fired, so a wrong implementation — an owned
/// `KeyExpr` left on the free-only shape (canon's keyexpr leaked), an
/// escaped-pointer `ShmMutBuffer` left on the drop+free shape (a
/// use-after-free) — would read 1 on the same counter and the cell would go
/// green on the exact hazard it exists for.
///
/// @param kind  One of the ZD_FIN_KIND_* codes above. Out-of-range returns 0:
///              the domain is a fixed header-declared enumeration and the Dart
///              mirror validates before calling, so this arm is unreachable by
///              construction — the same "the Dart guard is the guard" shape
///              the family contract describes. No failure code is introduced.
/// @return The count, monotonically non-decreasing, never reset.
FFI_PLUGIN_EXPORT int zd_fin_invocations(int kind);
/// `Config`'s net: `zd_config_drop` then `free(token)`.
///
/// ⚠️ The hot detach of this family. `Config.markConsumed()` FREES the Dart
/// block rather than moving ownership, so a missed detach on that path is a
/// double free of a block on the session-open path — and its ordering is a
/// pinned regression guard (PR #47, "a use-after-free on a 2008-byte block").
/// See the family contract above.
FFI_PLUGIN_EXPORT void zd_fin_config(void* token);
/// `ZBytes`'s net: `zd_bytes_drop` then `free(token)`.
///
/// ⚠️ The per-message class. `ZBytes` is constructed once per message on the
/// clone-in-loop throughput and ping paths, so this is the entry whose cost is
/// priced rather than assumed (seed criterion A9b). Its `markConsumed()` frees
/// the Dart block on the send path exactly as `Config`'s does, with the same
/// double-free consequence for a missed detach. See the family contract above.
FFI_PLUGIN_EXPORT void zd_fin_bytes(void* token);
/// `ZBytesWriter`'s net: `zd_bytes_writer_drop` then `free(token)`.
///
/// ⚠️ `finish()` is a RELEASE path, not just a state change: it moves the
/// handle into canon and frees the slot. It detaches for the same reason
/// `markConsumed()` does. See the family contract above.
FFI_PLUGIN_EXPORT void zd_fin_bytes_writer(void* token);
/// `Publisher`'s net: `zd_publisher_drop` then `free(token)`.
///
/// ⚠️ **Reached only from the matching-listener-OFF configuration.** A
/// publisher declared with `enableMatchingListener: true` holds a
/// `ReceivePort`, its drop callback can post, and a post from a finalizer
/// callback is documented undefined behaviour -- so that configuration is
/// deliberately left out of the net and keeps today's leak-on-forget. The
/// MARKER is on the class either way; only the NET is conditional.
FFI_PLUGIN_EXPORT void zd_fin_publisher(void* token);
/// Drops (frees) the configuration.
///
/// After this call the owned config is in gravestone state.
/// A second drop is a safe no-op.
///
/// @param config  Pointer to a z_owned_config_t to drop.
FFI_PLUGIN_EXPORT void zd_config_drop(z_owned_config_t* config);
/// Drops (frees) owned bytes.
///
/// After this call the owned bytes are in gravestone state.
/// A second drop is a safe no-op.
///
/// @param bytes  Pointer to a z_owned_bytes_t to drop.
FFI_PLUGIN_EXPORT void zd_bytes_drop(z_owned_bytes_t* bytes);
// ---------------------------------------------------------------------------
// Deserializer
// ---------------------------------------------------------------------------

/// Returns the size of ze_deserializer_t in bytes.
FFI_PLUGIN_EXPORT size_t zd_deserializer_sizeof(void);
/// Creates a deserializer from loaned bytes.
///
/// @param bytes  Loaned bytes to deserialize from.
/// @param out    Pointer to an uninitialized ze_deserializer_t.
FFI_PLUGIN_EXPORT void zd_deserializer_from_bytes(
    const z_loaned_bytes_t* bytes, ze_deserializer_t* out);
/// Checks if the deserializer has consumed all data.
///
/// @return true if no more data to parse, false otherwise.
FFI_PLUGIN_EXPORT bool zd_deserializer_is_done(const ze_deserializer_t* deser);
// ---------------------------------------------------------------------------
// Deserializer — type deserialization
// ---------------------------------------------------------------------------

FFI_PLUGIN_EXPORT int8_t zd_deserializer_deserialize_uint8(
    ze_deserializer_t* deser, uint8_t* out);
FFI_PLUGIN_EXPORT int8_t zd_deserializer_deserialize_uint16(
    ze_deserializer_t* deser, uint16_t* out);
FFI_PLUGIN_EXPORT int8_t zd_deserializer_deserialize_uint32(
    ze_deserializer_t* deser, uint32_t* out);
FFI_PLUGIN_EXPORT int8_t zd_deserializer_deserialize_uint64(
    ze_deserializer_t* deser, uint64_t* out);
/// Drops the writer without finishing.
FFI_PLUGIN_EXPORT void zd_bytes_writer_drop(z_owned_bytes_writer_t* writer);
/// `AdvancedPublisher`'s net: `zd_advanced_publisher_drop` then `free(token)`.
///
/// ⚠️ Matching-listener-OFF only, exactly as `zd_fin_publisher` above.
/// ⛔ **Guarded by `Z_FEATURE_UNSTABLE_API`, so it is ABSENT from the `stable`
/// native this package also ships.** The Dart side resolves each `zd_fin_*`
/// entry lazily, at first attach, and this one is only ever reached from a
/// path already behind the same feature predicate -- eager resolution of the
/// family would throw at initialization on a variant that legitimately lacks
/// it.
FFI_PLUGIN_EXPORT void zd_fin_advanced_publisher(void* token);
/// Drops (undeclares and frees) an advanced publisher.
FFI_PLUGIN_EXPORT void zd_advanced_publisher_drop(
    ze_owned_advanced_publisher_t* publisher);