package/lib/src/bindings.dart


  late final _zd_deserializer_deserialize_uint16Ptr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int8 Function(
            ffi.Pointer<ze_deserializer_t>,
            ffi.Pointer<ffi.Uint16>,
          )
        >
      >('zd_deserializer_deserialize_uint16');
  late final _zd_deserializer_deserialize_uint16 =
      _zd_deserializer_deserialize_uint16Ptr
          .asFunction<
            int Function(
              ffi.Pointer<ze_deserializer_t>,
              ffi.Pointer<ffi.Uint16>,
            )
          >();

  int zd_deserializer_deserialize_uint32(
    ffi.Pointer<ze_deserializer_t> deser,
    ffi.Pointer<ffi.Uint32> out,
  ) {
    return _zd_deserializer_deserialize_uint32(
      deser,
      out,
    );
  }

  late final _zd_deserializer_deserialize_uint32Ptr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int8 Function(
            ffi.Pointer<ze_deserializer_t>,
            ffi.Pointer<ffi.Uint32>,
          )
        >
      >('zd_deserializer_deserialize_uint32');
  late final _zd_deserializer_deserialize_uint32 =
      _zd_deserializer_deserialize_uint32Ptr
          .asFunction<
            int Function(
              ffi.Pointer<ze_deserializer_t>,
              ffi.Pointer<ffi.Uint32>,
            )
          >();

  int zd_deserializer_deserialize_uint64(
    ffi.Pointer<ze_deserializer_t> deser,
    ffi.Pointer<ffi.Uint64> out,
  ) {
    return _zd_deserializer_deserialize_uint64(
      deser,
      out,
    );
  }

  late final _zd_deserializer_deserialize_uint64Ptr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int8 Function(
            ffi.Pointer<ze_deserializer_t>,
            ffi.Pointer<ffi.Uint64>,
          )
        >
      >('zd_deserializer_deserialize_uint64');
  late final _zd_deserializer_deserialize_uint64 =
      _zd_deserializer_deserialize_uint64Ptr
          .asFunction<
            int Function(
              ffi.Pointer<ze_deserializer_t>,
              ffi.Pointer<ffi.Uint64>,
            )
          >();

  int zd_deserializer_deserialize_uint8(
    ffi.Pointer<ze_deserializer_t> deser,
    ffi.Pointer<ffi.Uint8> out,
  ) {
    return _zd_deserializer_deserialize_uint8(
      deser,
      out,
    );
  }

  late final _zd_deserializer_deserialize_uint8Ptr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int8 Function(
            ffi.Pointer<ze_deserializer_t>,
            ffi.Pointer<ffi.Uint8>,
          )
        >
      >('zd_deserializer_deserialize_uint8');
  late final _zd_deserializer_deserialize_uint8 =
      _zd_deserializer_deserialize_uint8Ptr
          .asFunction<
            int Function(ffi.Pointer<ze_deserializer_t>, ffi.Pointer<ffi.Uint8>)
          >();

  /// Creates a deserializer from loaned bytes.
  ///
  /// @param bytes  Loaned bytes to deserialize from.
  /// @param out    Pointer to an uninitialized ze_deserializer_t.
  void zd_deserializer_from_bytes(
    ffi.Pointer<ffi.Opaque> bytes,
    ffi.Pointer<ze_deserializer_t> out,
  ) {
    return _zd_deserializer_from_bytes(
      bytes,
      out,
    );
  }

  late final _zd_deserializer_from_bytesPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Void Function(
            ffi.Pointer<ffi.Opaque>,
            ffi.Pointer<ze_deserializer_t>,
          )
        >
      >('zd_deserializer_from_bytes');
  late final _zd_deserializer_from_bytes = _zd_deserializer_from_bytesPtr
      .asFunction<
        void Function(ffi.Pointer<ffi.Opaque>, ffi.Pointer<ze_deserializer_t>)
      >();

  /// Checks if the deserializer has consumed all data.
  ///
  /// @return true if no more data to parse, false otherwise.
  bool zd_deserializer_is_done(
    ffi.Pointer<ze_deserializer_t> deser,
  ) {
    return _zd_deserializer_is_done(
      deser,
    );
  }

  late final _zd_deserializer_is_donePtr =
      _lookup<
        ffi.NativeFunction<ffi.Bool Function(ffi.Pointer<ze_deserializer_t>)>
      >('zd_deserializer_is_done');
  late final _zd_deserializer_is_done = _zd_deserializer_is_donePtr
      .asFunction<bool Function(ffi.Pointer<ze_deserializer_t>)>();

  /// Returns the size of ze_deserializer_t in bytes.
  int zd_deserializer_sizeof() {
    return _zd_deserializer_sizeof();
  }

  late final _zd_deserializer_sizeofPtr =
      _lookup<ffi.NativeFunction<ffi.Size Function()>>(
        'zd_deserializer_sizeof',
      );
  late final _zd_deserializer_sizeof = _zd_deserializer_sizeofPtr
      .asFunction<int Function()>();

  /// Returns a bitmask of the optional zenoh features this native was built with.
  ///
  /// ZD_FEATURE_UNSTABLE_API is set when Z_FEATURE_UNSTABLE_API was defined at
  /// compile time; ZD_FEATURE_SHARED_MEMORY when Z_FEATURE_SHARED_MEMORY was.
  /// Which bits are set depends on the build variant the native was compiled
  /// as, so two natives for the same platform can answer differently. One fact
  /// holds on every variant: an Android native never carries shared memory. The
  /// Dart layer uses this to fail loudly when an unstable entrypoint is called
  /// against a native that lacks the feature (a build-variant mismatch), instead
  /// of crashing in zenoh-c. Cheap enough to call once and cache.
  int zd_features() {
    return _zd_features();
  }

  late final _zd_featuresPtr =
      _lookup<ffi.NativeFunction<ffi.Uint32 Function()>>('zd_features');
  late final _zd_features = _zd_featuresPtr.asFunction<int Function()>();

  /// `AdvancedPublisher`'s net: `zd_advanced_publisher_drop` then `free(token)`.
  ///
  /// ⚠️ Matching-listener-OFF only, exactly as `zd_fin_publisher` above.
  /// ⛔ **Guarded by `Z_FEATURE_UNSTABLE_API`, so it is ABSENT from the `stable`
  /// native this package also ships.** The Dart side resolves each `zd_fin_*`
  /// entry lazily, at first attach, and this one is only ever reached from a
  /// path already behind the same feature predicate -- eager resolution of the
  /// family would throw at initialization on a variant that legitimately lacks
  /// it.
  void zd_fin_advanced_publisher(
    ffi.Pointer<ffi.Void> token,
  ) {
    return _zd_fin_advanced_publisher(
      token,
    );
  }

  late final _zd_fin_advanced_publisherPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Void>)>>(
        'zd_fin_advanced_publisher',
      );
  late final _zd_fin_advanced_publisher = _zd_fin_advanced_publisherPtr
      .asFunction<void Function(ffi.Pointer<ffi.Void>)>();

  /// `ZBytes`'s net: `zd_bytes_drop` then `free(token)`.
  ///
  /// ⚠️ The per-message class. `ZBytes` is constructed once per message on the
  /// clone-in-loop throughput and ping paths, so this is the entry whose cost is
  /// priced rather than assumed (seed criterion A9b). Its `markConsumed()` frees
  /// the Dart block on the send path exactly as `Config`'s does, with the same
  /// double-free consequence for a missed detach. See the family contract above.
  void zd_fin_bytes(
    ffi.Pointer<ffi.Void> token,
  ) {
    return _zd_fin_bytes(
      token,
    );
  }

  late final _zd_fin_bytesPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Void>)>>(
        'zd_fin_bytes',
      );
  late final _zd_fin_bytes = _zd_fin_bytesPtr
      .asFunction<void Function(ffi.Pointer<ffi.Void>)>();

  /// `ZBytesWriter`'s net: `zd_bytes_writer_drop` then `free(token)`.
  ///
  /// ⚠️ `finish()` is a RELEASE path, not just a state change: it moves the
  /// handle into canon and frees the slot. It detaches for the same reason
  /// `markConsumed()` does. See the family contract above.
  void zd_fin_bytes_writer(
    ffi.Pointer<ffi.Void> token,
  ) {
    return _zd_fin_bytes_writer(
      token,
    );
  }

  late final _zd_fin_bytes_writerPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Void>)>>(
        'zd_fin_bytes_writer',
      );
  late final _zd_fin_bytes_writer = _zd_fin_bytes_writerPtr
      .asFunction<void Function(ffi.Pointer<ffi.Void>)>();

  /// `Config`'s net: `zd_config_drop` then `free(token)`.
  ///
  /// ⚠️ The hot detach of this family. `Config.markConsumed()` FREES the Dart
  /// block rather than moving ownership, so a missed detach on that path is a
  /// double free of a block on the session-open path — and its ordering is a
  /// pinned regression guard (PR #47, "a use-after-free on a 2008-byte block").
  /// See the family contract above.
  void zd_fin_config(
    ffi.Pointer<ffi.Void> token,
  ) {
    return _zd_fin_config(
      token,
    );
  }

  late final _zd_fin_configPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Void>)>>(
        'zd_fin_config',
      );
  late final _zd_fin_config = _zd_fin_configPtr
      .asFunction<void Function(ffi.Pointer<ffi.Void>)>();

  /// Frees a block with no canon handle in it. The slot-only shape.
  ///
  /// Used where the Dart wrapper's whole release is a `calloc.free` — today
  /// `ZDeserializer` — and as the RE-ATTACHED shape for a wrapper whose canon
  /// handle has moved out from under it (a consumed `ShmMutBuffer`, a
  /// `KeyExpr` view's string block).
  ///
  /// See the family contract above: callback-only, not idempotent, frees a
  /// Dart-allocated block.
  void zd_fin_free_block(
    ffi.Pointer<ffi.Void> token,
  ) {
    return _zd_fin_free_block(
      token,
    );
  }

  late final _zd_fin_free_blockPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Void>)>>(
        'zd_fin_free_block',
      );
  late final _zd_fin_free_block = _zd_fin_free_blockPtr
      .asFunction<void Function(ffi.Pointer<ffi.Void>)>();

  /// Returns how many times the entry for @p kind has fired in this process.
  ///
  /// ⚠️ **A TEST INSTRUMENT, and the only member of this family Dart calls
  /// directly.** It exists because a leak is invisible to a behavioural
  /// assertion: dispose-after-consume, double-dispose and accessor-guard cells
  /// all pass identically on leaking and on fixed code. This counter plus
  /// allocation pressure is what makes a release-path cell a RESOURCE
  /// measurement, with a both-ways injected calibration
  /// (attach-without-detach → 2 · detach-before-drop → 1 · no-attach → 0).
  ///
  /// ⚠️ **PER ENTRY, NOT GLOBAL, AND THAT IS LOAD-BEARING.** A single counter
  /// cannot say WHICH entry fired, so a wrong implementation — an owned
  /// `KeyExpr` left on the free-only shape (canon's keyexpr leaked), an
  /// escaped-pointer `ShmMutBuffer` left on the drop+free shape (a
  /// use-after-free) — would read 1 on the same counter and the cell would go
  /// green on the exact hazard it exists for.
  ///
  /// @param kind  One of the ZD_FIN_KIND_* codes above. Out-of-range returns 0:
  /// the domain is a fixed header-declared enumeration and the Dart
  /// mirror validates before calling, so this arm is unreachable by
  /// construction — the same "the Dart guard is the guard" shape
  /// the family contract describes. No failure code is introduced.
  /// @return The count, monotonically non-decreasing, never reset.
  int zd_fin_invocations(
    int kind,
  ) {
    return _zd_fin_invocations(
      kind,
    );
  }

  late final _zd_fin_invocationsPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Int)>>(
        'zd_fin_invocations',
      );
  late final _zd_fin_invocations = _zd_fin_invocationsPtr
      .asFunction<int Function(int)>();
